--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>EAS Tracker</title>
-
-  <!-- Force-refresh CSS on mobile Safari with ?v=2 -->
-  <link rel="stylesheet" href="/public/styles.css?v=2"/>
+  <link rel="stylesheet" href="/public/styles.css"/>
 </head>
 <body>
   <div id="app">
@@ -49,37 +47,58 @@
           <!-- 2) Stock + Ad Spend by Country -->
           <div id="stockByCountry" class="section">
             <h2>Total Stock & Ad Spend by Country</h2>
+            <!-- table filled by JS -->
           </div>
 
-          <!-- 3) Daily Delivered -->
-          <div id="dailyDelivered" class="section">
-            <h2>Daily Delivered</h2>
+          <!-- 3) Weekly Delivered (Mon-Sun grid, per country) -->
+          <div id="weeklyDelivered" class="section">
+            <h2>Weekly Delivered (Monday → Sunday)</h2>
             <div class="card">
               <div class="flex">
-                <input id="delivDate" type="date" class="input"/>
-                <select id="delivCountry" class="input"></select>
-                <input id="delivCount" type="number" min="0" class="input" placeholder="Delivered"/>
-                <button id="delivAdd" class="btn">Add</button>
-              </div>
-              <div class="flex" style="margin-top:8px">
-                <input id="delivStart" type="date" class="input"/>
-                <input id="delivEnd" type="date" class="input"/>
-                <button id="delivFilter" class="btn outline">Filter</button>
-                <div class="badge">Total in range: <span id="delivTotal">0</span></div>
+                <div class="badge" id="wdWeekLabel">This week</div>
+                <button id="wdSave" class="btn">Save / Update</button>
+                <button id="wdReset" class="btn outline">Reset Week</button>
+                <span class="muted">Editable cells. Totals auto-calc.</span>
               </div>
             </div>
-            <table id="delivTable" class="table">
-              <thead><tr><th>Date</th><th>Day</th><th>Country</th><th>Delivered</th></tr></thead>
-              <tbody></tbody>
-            </table>
+            <div class="card">
+              <table id="delivWeekTable" class="table">
+                <thead>
+                  <tr>
+                    <th>Country</th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    <th>Saturday</th>
+                    <th>Sunday</th>
+                    <th>Total</th>
+                  </tr>
+                </thead>
+                <tbody><!-- rows filled by JS --></tbody>
+                <tfoot>
+                  <tr>
+                    <th>All Countries</th>
+                    <th id="wdMonT">0</th>
+                    <th id="wdTueT">0</th>
+                    <th id="wdWedT">0</th>
+                    <th id="wdThuT">0</th>
+                    <th id="wdFriT">0</th>
+                    <th id="wdSatT">0</th>
+                    <th id="wdSunT">0</th>
+                    <th id="wdAllTotal">0</th>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
           </div>
 
-          <!-- 4) Daily Advertising Spend -->
+          <!-- 4) Daily Advertising Spend (no date selector; replace today's spend) -->
           <div id="dailyAdSpend" class="section">
-            <h2>Daily Advertising Spend</h2>
+            <h2>Daily Advertising Spend (Today)</h2>
             <div class="card">
               <div class="flex">
-                <input id="adDate" type="date" class="input"/>
                 <select id="adPlatform" class="input">
                   <option value="facebook">Facebook</option>
                   <option value="tiktok">TikTok</option>
@@ -88,7 +107,8 @@
                 <select id="adProduct" class="input"></select>
                 <select id="adCountry" class="input"></select>
                 <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adAdd" class="btn">Save</button>
+                <button id="adAdd" class="btn">Save / Replace</button>
+                <span class="muted">Saving again replaces today’s spend for the same Product + Platform + Country.</span>
               </div>
             </div>
           </div>
@@ -115,7 +135,7 @@
             <table id="shipCKTable" class="table">
               <thead><tr>
                 <th>ID</th><th>Product</th><th>Route</th><th>Qty</th>
-                <th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th>
+                <th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
               <tbody></tbody>
             </table>
@@ -127,7 +147,7 @@
             <table id="shipICTable" class="table">
               <thead><tr>
                 <th>ID</th><th>Product</th><th>Route</th><th>Qty</th>
-                <th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th>
+                <th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
               <tbody></tbody>
             </table>
@@ -174,11 +194,14 @@
             <h2>Lifetime Product Performance</h2>
             <div class="card">
               <div class="flex">
-                <select id="lpProduct" class="input"><option value="">All products</option></select>
+                <select id="lpProduct" class="input">
+                  <option value="">All products</option>
+                </select>
                 <input id="lpStart" type="date" class="input"/>
                 <input id="lpEnd" type="date" class="input"/>
                 <button id="lpRun" class="btn">Run</button>
               </div>
+              <div class="muted">Pulls from remittances + shipments + product base costs.</div>
             </div>
             <table id="lifetimeTable" class="table">
               <thead><tr>
@@ -192,7 +215,7 @@
         <!-- ===================== PRODUCTS ===================== -->
         <section id="products" style="display:none">
           <h2>Products</h2>
-
+          <!-- Add Product -->
           <div class="card">
             <div class="h">Add Product</div>
             <div class="flex">
@@ -205,27 +228,28 @@
             </div>
           </div>
 
+          <!-- Products Table -->
           <table id="productsTable" class="table">
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
             <tbody></tbody>
           </table>
 
-          <!-- Product details placeholder hooks (JS fills) -->
+          <!-- Product Details (in-page, shown when "Open") -->
           <div id="productDetails" class="section" style="display:none">
             <h3>Product Details</h3>
 
             <div class="card">
               <div class="h">Stock & Ad Spend by Country</div>
-              <div id="pdStockByCountry"></div>
+              <div id="pdStockByCountry"><!-- filled by JS --></div>
             </div>
 
             <div class="card">
               <div class="h">Profit + Advertising by Country (Editable)</div>
-              <div id="pdProfitBudget"></div>
+              <div id="pdProfitBudget"><!-- editable UI by JS --></div>
             </div>
 
             <div class="card">
-              <div class="h">Daily Ad Spend (per Country & Platform)</div>
+              <div class="h">Daily Ad Spend (Replace Today's)</div>
               <div class="flex">
                 <select id="pdAdCountry" class="input"></select>
                 <select id="pdAdPlatform" class="input">
@@ -233,9 +257,8 @@
                   <option value="tiktok">TikTok</option>
                   <option value="google">Google</option>
                 </select>
-                <input id="pdAdDate" type="date" class="input"/>
                 <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="pdAdSave" class="btn">Save</button>
+                <button id="pdAdSave" class="btn">Save / Replace</button>
               </div>
             </div>
 
@@ -249,10 +272,11 @@
                 <input id="pdRPieces" type="number" class="input" placeholder="Pieces" min="0"/>
                 <input id="pdRRevenue" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
                 <input id="pdRAdSpend" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
-                <input id="pdRCPD" type="number" class="input" placeholder="Cost/Delivered" min="0" step="0.01"/>
+                <!-- replaced CPD with extra delivery cost per piece -->
+                <input id="pdRExtra" type="number" class="input" placeholder="Extra cost to deliver per piece (USD)" min="0" step="0.01"/>
                 <button id="pdRAdd" class="btn">Add</button>
               </div>
-              <div id="pdRTableWrap"></div>
+              <div id="pdRTableWrap"><!-- table by JS --></div>
             </div>
 
             <div class="card">
@@ -270,7 +294,7 @@
             <div class="card">
               <div class="h">Transit (China → Kenya)</div>
               <table id="pdShipCK" class="table">
-                <thead><tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th></tr></thead>
+                <thead><tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
                 <tbody></tbody>
               </table>
             </div>
@@ -278,7 +302,7 @@
             <div class="card">
               <div class="h">Transit (Inter-country)</div>
               <table id="pdShipIC" class="table">
-                <thead><tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th></tr></thead>
+                <thead><tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
                 <tbody></tbody>
               </table>
             </div>
@@ -290,7 +314,7 @@
                 <input id="pdLPEnd" type="date" class="input"/>
                 <button id="pdLPRun" class="btn">Run</button>
               </div>
-              <div id="pdLPTableWrap"></div>
+              <div id="pdLPTableWrap"><!-- table by JS --></div>
             </div>
 
             <div class="card">
@@ -313,7 +337,7 @@
                 <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
                 <button id="pdInfRun" class="btn outline">Filter</button>
               </div>
-              <div id="pdInfList"></div>
+              <div id="pdInfList"><!-- table/list by JS --></div>
             </div>
           </div>
         </section>
@@ -322,6 +346,7 @@
         <section id="performance" style="display:none">
           <h2>Performance</h2>
 
+          <!-- 1) Top Delivered Products -->
           <div class="card">
             <div class="h">Top Delivered Products</div>
             <div class="flex">
@@ -341,6 +366,7 @@
             </table>
           </div>
 
+          <!-- 2) Remittance Report (CPD replaced with Extra cost per piece) -->
           <div class="card">
             <div class="h">Remittance Report</div>
             <div class="flex">
@@ -352,7 +378,7 @@
               <input id="rPieces" type="number" class="input" placeholder="Pieces" min="0"/>
               <input id="rRev" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
               <input id="rAds" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
-              <input id="rCPD" type="number" class="input" placeholder="Cost per Delivered" min="0" step="0.01"/>
+              <input id="rExtra" type="number" class="input" placeholder="Extra cost to deliver per piece (USD)" min="0" step="0.01"/>
               <button id="rAdd" class="btn">Add</button>
             </div>
           </div>
@@ -362,6 +388,13 @@
         <section id="finance" style="display:none">
           <h2>Finance</h2>
 
+          <!-- Big running balance -->
+          <div class="card">
+            <div class="h">Running Balance</div>
+            <div id="finBalanceBig" style="font-size:28px;font-weight:800;">0 USD</div>
+          </div>
+
+          <!-- Categories (view + add) -->
           <div class="card">
             <div class="h">Debit / Credit Categories</div>
             <div id="fcList" style="margin-bottom:8px">Debits: - | Credits: -</div>
@@ -375,15 +408,13 @@
             </div>
           </div>
 
+          <!-- Entries -->
           <div class="card">
             <div class="h">Entries</div>
             <div class="flex">
               <input id="feDate" type="date" class="input"/>
-              <select id="feType" class="input">
-                <option value="debit">Debit</option>
-                <option value="credit">Credit</option>
-              </select>
-              <input id="feCat" class="input" placeholder="Category"/>
+              <!-- category selection replaces free text -->
+              <select id="feCat" class="input"></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
               <button id="feAdd" class="btn">Add Entry</button>
@@ -392,13 +423,14 @@
             <div class="flex" style="margin-top:8px">
               <input id="fes" type="date" class="input"/>
               <input id="fee" type="date" class="input"/>
-              <input id="fef" class="input" placeholder="Filter categories (comma separated)"/>
+              <!-- multi-select filter; end-of-range balance shows below -->
+              <select id="fef" class="input" multiple style="min-width:220px"></select>
               <button id="feRun" class="btn outline">Run</button>
-              <div id="feBalance" class="badge">Balance: —</div>
+              <div id="feBalance" class="badge">Balance (range): —</div>
             </div>
 
             <table id="feTable" class="table" style="margin-top:8px">
-              <thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th></tr></thead>
+              <thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th>Actions</th></tr></thead>
               <tbody></tbody>
             </table>
           </div>
@@ -408,22 +440,32 @@
         <section id="settings" style="display:none">
           <h2>Settings</h2>
 
+          <!-- Countries -->
           <div class="card">
             <div class="h">Countries</div>
             <div class="flex">
               <input id="cty" class="input" placeholder="Add country"/>
               <button id="ctyAdd" class="btn">Add</button>
             </div>
-            <div id="ctyList" style="margin-top:8px"></div>
+            <div id="ctyList" style="margin-top:8px"><!-- chips here --></div>
           </div>
 
+          <!-- Edit Product Info -->
           <div class="card">
             <div class="h">Edit Product Info</div>
-            <div id="editProductWrap">
-              <p>Use the Products page to change status (Pause/Run) and delete. If you want inline edit UI here, say the word and I’ll add it.</p>
+            <div class="flex">
+              <select id="epSelect" class="input" style="min-width:220px"></select>
+              <input id="epName" class="input" placeholder="Name"/>
+              <input id="epSku" class="input" placeholder="SKU"/>
+              <input id="epCost" type="number" class="input" placeholder="Cost from China (USD)" min="0" step="0.01"/>
+              <input id="epShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" min="0" step="0.01"/>
+              <input id="epMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" min="0" step="0.01"/>
+              <button id="epSave" class="btn">Save Changes</button>
             </div>
+            <div class="muted">Pick a product, edit fields, click Save. Pause/Run & Delete are in Products table.</div>
           </div>
 
+          <!-- Restore -->
           <div class="card">
             <div class="h">System Restore</div>
             <div class="flex">
@@ -431,41 +473,15 @@
               <button class="btn outline restore" data-win="1h">1 hour ago</button>
               <button class="btn outline restore" data-win="24h">24 hours ago</button>
               <button class="btn outline restore" data-win="3d">3 days ago</button>
+              <span class="muted">Requires snapshots in /data/snapshots (use daily cron or run snapshot manually).</span>
             </div>
           </div>
         </section>
 
-      </div>
-    </div>
-  </div>
+      </div><!-- /.container -->
+    </div><!-- /#main -->
+  </div><!-- /#app -->
 
-  <!-- Force-refresh script on mobile Safari with ?v=2; defer so DOM exists -->
-  <script src="/public/app.js?v=2" defer></script>
-
-  <!-- Tiny inline fallback so Login works even if app.js fails to load -->
-  <script>
-  (function(){
-    function post(url, data){
-      return fetch(url, {
-        method:'POST', headers:{'Content-Type':'application/json'},
-        credentials:'include', body: JSON.stringify(data||{})
-      });
-    }
-    function boot(){
-      var btn=document.getElementById('loginBtn');
-      if(!btn) return;
-      btn.addEventListener('click', async function(){
-        var p=(document.getElementById('pw')||{}).value||'';
-        try{
-          const r=await post('/api/auth',{password:p});
-          if(!r.ok){ alert('Wrong password'); return; }
-          location.reload();
-        }catch(e){ alert('Network error'); }
-      });
-    }
-    if(document.readyState==='loading') document.addEventListener('DOMContentLoaded', boot);
-    else boot();
-  })();
-  </script>
+  <script src="/public/app.js"></script>
 </body>
 </html>
