--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
       <div class="row">
-        <input id="pw" type="password" class="input" placeholder="Password"/>
+        <input id="pw" type="password" class="input" placeholder="Password" autocomplete="current-password"/>
         <button id="loginBtn" class="btn">Login</button>
       </div>
+      <div id="loginMsg" class="muted" style="display:none;color:#c00;margin-top:6px;">Wrong password</div>
     </div>
 
     <!-- ================= MAIN APP ================= -->
@@ -46,14 +47,14 @@
             </div>
           </div>
 
-          <!-- Total Stock & Ad Spend by Country (totals row included) -->
+          <!-- Total Stock & Ad Spend by Country -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table id="stockByCountryTable" class="table">
+            <table id="stockByCountryTbl" class="table">
               <thead>
                 <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
               </thead>
-              <tbody id="stockByCountryBody"><!-- rows injected --></tbody>
+              <tbody><!-- injected --></tbody>
               <tfoot>
                 <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr>
               </tfoot>
@@ -65,26 +66,13 @@
             <h2>Weekly Delivered (Mon → Sun)</h2>
             <div class="card">
               <div class="row wrap">
-                <button id="weeklyPrev" class="btn outline">◀ Prev week</button>
-                <div class="badge" id="weeklyRange">Week: </div>
-                <button id="weeklyNext" class="btn outline">Next week ▶</button>
-                <button id="weeklySave" class="btn">Save</button>
-                <button id="weeklyReset" class="btn danger outline">Reset</button>
+                <button id="wdSave" class="btn">Save Week</button>
+                <button id="wdReset" class="btn outline danger">Reset</button>
               </div>
-              <small>Tip: the grid shows <b>all countries</b> in the system. Click a cell to edit delivered pieces for that day/country.</small>
+              <small>The grid shows <b>all countries</b> in the system. Edit cells per day/country and click Save.</small>
             </div>
             <div class="table-scroll">
-              <table id="weeklyTable" class="table compact">
-                <thead id="weeklyHead"><!-- Mon..Sun headers injected --></thead>
-                <tbody id="weeklyBody"><!-- one row per country injected --></tbody>
-                <tfoot>
-                  <tr class="totals"><th>Totals</th>
-                    <th id="wMonT">0</th><th id="wTueT">0</th><th id="wWedT">0</th>
-                    <th id="wThuT">0</th><th id="wFriT">0</th><th id="wSatT">0</th><th id="wSunT">0</th>
-                    <th id="wAllT">0</th>
-                  </tr>
-                </tfoot>
-              </table>
+              <table id="weeklyGrid" class="table compact"><!-- head/body/foot injected --></table>
             </div>
           </div>
 
@@ -101,9 +89,9 @@
                 <select id="adProduct" class="input"></select>
                 <select id="adCountry" class="input"></select>
                 <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adSave" class="btn">Save/Replace</button>
+                <button id="adAdd" class="btn">Save/Replace</button>
               </div>
-              <small>Saving again for the same <b>product + platform + country</b> will replace the previous value for today.</small>
+              <small>Saving again for the same <b>product + platform + country</b> replaces the previous value.</small>
             </div>
           </div>
 
@@ -120,7 +108,7 @@
                 <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
                 <button id="mvAdd" class="btn">Add Movement</button>
               </div>
-              <small>When marked as arrived, the system will <b>add to destination</b> and <b>deduct from origin</b>.</small>
+              <small>When marked as arrived, stock is <b>added to destination</b> and <b>deducted from origin</b>.</small>
             </div>
           </div>
 
@@ -155,11 +143,11 @@
               <input id="pcEnd" type="date" class="input"/>
               <button id="pcRun" class="btn">Run</button>
             </div>
-            <table class="table" id="profitCountry">
+            <table class="table" id="profitCountryTable">
               <thead><tr>
                 <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
               </tr></thead>
-              <tbody id="profitCountryBody"><!-- rows --></tbody>
+              <tbody><!-- rows --></tbody>
               <tfoot>
                 <tr class="totals">
                   <th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th>
@@ -268,7 +256,6 @@
               <input id="rPieces" type="number" class="input" placeholder="Pieces" min="0"/>
               <input id="rRev" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
               <input id="rAds" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
-              <!-- replaced CPD with extra per-piece delivery cost -->
               <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
               <button id="rAdd" class="btn">Add</button>
             </div>
@@ -283,7 +270,7 @@
           <!-- Running Balance (all time) -->
           <div class="card big-balance">
             <div class="h">Running Balance (All-time)</div>
-            <div id="runBalance" class="balance">0.00 USD</div>
+            <div id="feRunning" class="balance">0.00 USD</div>
           </div>
 
           <!-- Manage Categories (add + delete) -->
@@ -300,11 +287,11 @@
             <div class="row cats">
               <div>
                 <h4>Debits</h4>
-                <div id="fcDebits" class="chips"><!-- chips with delete buttons --></div>
+                <div id="fcDebitList" class="chips"><!-- chips with delete buttons --></div>
               </div>
               <div>
                 <h4>Credits</h4>
-                <div id="fcCredits" class="chips"><!-- chips with delete buttons --></div>
+                <div id="fcCreditList" class="chips"><!-- chips with delete buttons --></div>
               </div>
             </div>
           </div>
@@ -318,7 +305,6 @@
                 <option value="debit">Debit</option>
                 <option value="credit">Credit</option>
               </select>
-              <!-- category must be selected from existing list -->
               <select id="feCat" class="input"></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
@@ -357,7 +343,7 @@
           <div class="card">
             <div class="h">Edit Product Info</div>
             <div class="row wrap">
-              <select id="epSelect" class="input"><option value="">Select product…</option></select>
+              <select id="editProdSel" class="input"><option value="">Select product…</option></select>
               <input id="epName" class="input" placeholder="Product name"/>
               <input id="epSku" class="input" placeholder="SKU"/>
               <input id="epCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
@@ -371,12 +357,11 @@
           <div class="card">
             <div class="h">Manual Save &amp; Restore</div>
             <div class="row">
-              <input id="snapName" class="input" placeholder="Name this snapshot"/>
-              <button id="snapSave" class="btn">Save current system data</button>
+              <button id="ssSave" class="btn">Save current system data</button>
             </div>
             <table class="table">
-              <thead><tr><th>Name</th><th>File</th><th>Actions</th></tr></thead>
-              <tbody id="snapList"><!-- rows with Push / Delete buttons --></tbody>
+              <thead><tr><th>Name</th><th>Actions</th></tr></thead>
+              <tbody id="ssList"><!-- rows with Push / Delete buttons --></tbody>
             </table>
           </div>
         </section>
