--- a/index.html
+++ b/index.html
@@ -371,5 +371,12 @@
   </div><!-- /app -->
 
   <script src="/public/app.js"></script>
+    ...
+  <!-- all content of the page -->
+
+  <!-- JavaScript at the end -->
+  <script src="/public/app.js"></script>
+</body>
+</html>
 </body>
 </html>
