--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
       <div class="row">
-        <input id="pw" type="password" class="input" placeholder="Password" autocomplete="current-password"/>
+        <input id="pw" type="password" class="input" placeholder="Password"/>
         <button id="loginBtn" class="btn">Login</button>
       </div>
-      <div id="loginMsg" class="muted" style="display:none;color:#c00;margin-top:6px;">Wrong password</div>
     </div>
 
     <!-- ================= MAIN APP ================= -->
@@ -47,14 +46,14 @@
             </div>
           </div>
 
-          <!-- Total Stock & Ad Spend by Country -->
+          <!-- Total Stock & Ad Spend by Country (from shipments+remittances+adspend) -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
             <table id="stockByCountryTbl" class="table">
               <thead>
                 <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
               </thead>
-              <tbody><!-- injected --></tbody>
+              <tbody><!-- rows injected by app.js --></tbody>
               <tfoot>
                 <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr>
               </tfoot>
@@ -65,18 +64,23 @@
           <div class="section">
             <h2>Weekly Delivered (Mon → Sun)</h2>
             <div class="card">
-              <div class="row wrap">
-                <button id="wdSave" class="btn">Save Week</button>
-                <button id="wdReset" class="btn outline danger">Reset</button>
+              <div class="row wrap" style="gap:8px">
+                <button id="weeklyPrev" class="btn outline">◀ Prev week</button>
+                <div class="badge" id="weeklyRange">Week:</div>
+                <button id="weeklyNext" class="btn outline">Next week ▶</button>
+                <button id="wdSave" class="btn">Save</button>
+                <button id="wdReset" class="btn danger outline">Reset</button>
               </div>
-              <small>The grid shows <b>all countries</b> in the system. Edit cells per day/country and click Save.</small>
+              <small>The grid shows <b>all countries</b>. Click any cell to edit pieces delivered that day. Save to persist.</small>
             </div>
             <div class="table-scroll">
-              <table id="weeklyGrid" class="table compact"><!-- head/body/foot injected --></table>
+              <table id="weeklyGrid" class="table compact">
+                <!-- app.js renders head/body/foot with Mon..Sun and all countries -->
+              </table>
             </div>
           </div>
 
-          <!-- Daily Advertising Spend (no date; replace if exists) -->
+          <!-- Daily Advertising Spend (no date; upsert per product+country+platform) -->
           <div class="section">
             <h2>Daily Advertising Spend</h2>
             <div class="card">
@@ -89,7 +93,7 @@
                 <select id="adProduct" class="input"></select>
                 <select id="adCountry" class="input"></select>
                 <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adAdd" class="btn">Save/Replace</button>
+                <button id="adAdd" class="btn">Save / Replace</button>
               </div>
               <small>Saving again for the same <b>product + platform + country</b> replaces the previous value.</small>
             </div>
@@ -108,29 +112,29 @@
                 <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
                 <button id="mvAdd" class="btn">Add Movement</button>
               </div>
-              <small>When marked as arrived, stock is <b>added to destination</b> and <b>deducted from origin</b>.</small>
+              <small>When marked as arrived, the system <b>adds to destination</b> and <b>deducts from origin</b>.</small>
             </div>
           </div>
 
           <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
-            <table class="table" id="shipCK">
+            <table class="table">
               <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th>
               </tr></thead>
-              <tbody id="shipCKBody"><!-- rows --></tbody>
+              <tbody id="shipCKBody"><!-- rows injected --></tbody>
             </table>
           </div>
 
           <!-- Transit Inter-country -->
           <div class="section">
             <h2>Transit (Inter-country)</h2>
-            <table class="table" id="shipIC">
+            <table class="table">
               <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Actions</th>
               </tr></thead>
-              <tbody id="shipICBody"><!-- rows --></tbody>
+              <tbody id="shipICBody"><!-- rows injected --></tbody>
             </table>
           </div>
 
@@ -147,12 +151,7 @@
               <thead><tr>
                 <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
               </tr></thead>
-              <tbody><!-- rows --></tbody>
-              <tfoot>
-                <tr class="totals">
-                  <th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th>
-                </tr>
-              </tfoot>
+              <tbody><!-- rows injected --></tbody>
             </table>
           </div>
 
@@ -168,7 +167,7 @@
 
           <div class="section">
             <h2>Weekly To-Do</h2>
-            <div id="weeklyWrap" class="weeks"><!-- 7 cards injected --></div>
+            <div id="weeklyWrap" class="weeks"><!-- 7 day-cards injected --></div>
           </div>
 
           <!-- Lifetime Product Performance (global) -->
@@ -184,7 +183,7 @@
               <thead><tr>
                 <th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
               </tr></thead>
-              <tbody id="lifetimeBody"><!-- rows --></tbody>
+              <tbody id="lifetimeBody"><!-- rows injected --></tbody>
               <tfoot>
                 <tr class="totals"><th colspan="2">Totals</th>
                   <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
@@ -215,7 +214,7 @@
             <tbody><!-- rows injected --></tbody>
           </table>
 
-          <small>Click <b>Open</b> to go to that product’s own page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
+          <small>Click <b>Open</b> to go to that product’s page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
         <!-- ============ PERFORMANCE ============ -->
@@ -287,11 +286,11 @@
             <div class="row cats">
               <div>
                 <h4>Debits</h4>
-                <div id="fcDebitList" class="chips"><!-- chips with delete buttons --></div>
+                <div id="fcDebitList" class="chips deletable"><!-- chips injected --></div>
               </div>
               <div>
                 <h4>Credits</h4>
-                <div id="fcCreditList" class="chips"><!-- chips with delete buttons --></div>
+                <div id="fcCreditList" class="chips deletable"><!-- chips injected --></div>
               </div>
             </div>
           </div>
@@ -301,11 +300,7 @@
             <div class="h">Entries</div>
             <div class="row wrap">
               <input id="feDate" type="date" class="input"/>
-              <select id="feType" class="input">
-                <option value="debit">Debit</option>
-                <option value="credit">Credit</option>
-              </select>
-              <select id="feCat" class="input"></select>
+              <select id="feCat" class="input"><!-- options injected from categories --></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
               <button id="feAdd" class="btn">Add Entry</button>
@@ -315,7 +310,7 @@
               <input id="fes" type="date" class="input"/>
               <input id="fee" type="date" class="input"/>
               <button id="feRun" class="btn outline">Run</button>
-              <div id="feBalance" class="badge">Period Balance: —</div>
+              <div id="feBalance" class="badge">Balance for period: —</div>
             </div>
 
             <table id="feTable" class="table">
@@ -359,10 +354,7 @@
             <div class="row">
               <button id="ssSave" class="btn">Save current system data</button>
             </div>
-            <table class="table">
-              <thead><tr><th>Name</th><th>Actions</th></tr></thead>
-              <tbody id="ssList"><!-- rows with Push / Delete buttons --></tbody>
-            </table>
+            <div id="ssList" class="list"><!-- rows with Push / Delete buttons --></div>
           </div>
         </section>
 
@@ -370,13 +362,7 @@
     </div><!-- /main -->
   </div><!-- /app -->
 
+  <!-- keep this as THE LAST LINE before </body> -->
   <script src="/public/app.js"></script>
-    ...
-  <!-- all content of the page -->
-
-  <!-- JavaScript at the end -->
-  <script src="/public/app.js"></script>
-</body>
-</html>
 </body>
 </html>
